2013-11-14  Aloisio Almeida Jr  <aloisio.almeida@openbossa.org>

        [Cairo] Avoid extra copy when drawing images
        https://bugs.webkit.org/show_bug.cgi?id=124209

        Reviewed by Martin Robinson.

        To solve the bug #58309 a cairo subsurface is being used to limit the
        source image boundaries.
        In many cases, when a cairo subsurface is used for drawing an image,
        it occurs an image copy, causing performance penalty. In the case of
        the function PlatformContextCairo::drawSurfaceToContext, the image
        copy always happens.
        So, we should use the subsurface only when it's really necessary.
        In cases where we're drawing the whole image, the subsurface is
        unnecessary.

        The proposed patch avoid the use of subsurfaces when sampling the whole
        image.

        No new tests. It's an enhancement. Already covered by existing tests.

        * platform/graphics/cairo/PlatformContextCairo.cpp:
        (WebCore::PlatformContextCairo::drawSurfaceToContext):

2013-08-29  Arnaud Renevier  <a.renevier@samsung.com>

        [cairo] canvas drawing on itself doesn't work with accelerated canvas
        https://bugs.webkit.org/show_bug.cgi?id=118808

        Reviewed by Martin Robinson.

        When copying an accelerated image, we try to get its dimensions with
        cairo_image_surface_get_width/cairo_image_surface_get_height. As
        surface is not an image, this returns width and height of 0.

        Many other places use cairo_image_surface_get although the surface may
        be a gl surface. 
        
        This patch fixes those issues by implementing a cairoSurfaceSize
        helper that returns the surface size whatever type it is.

        It use cairo_surface_create_similar instead of
        cairo_image_surface_create in copyCairoImageSurface. It also calls
        cairo_paint in encodeImage when a drawing over a black background is
        needed.
